# ingest-token-prices

./: .env  .gitignore  Cargo.toml  README.md
migrations/2022-02-20-164245_prices/: down.sql  up.sql
migrations/2022-02-24-194229_mapping/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
