[package]
name = "price_backfill"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
log = "0.4"
libsqlite3-sys = { version = ">=0.8.0, <0.19.0", features = ["bundled"] }
reqwest = {version="0.11.4", features=["blocking","rustls-tls"], default-features=false}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
diesel = { version = "1.4.4", features = ["sqlite","chrono"] }
dotenv = "0.15.0"
chrono = "0.4"
job_scheduler = "1.2.1"
clap = { version = "3.0.5", features = ["derive", "cargo"] }

